fix title spacing card

--- a/src/app/shared/stylesheets/components/card.scss
+++ b/src/app/shared/stylesheets/components/card.scss
@@ -28,6 +28,7 @@ md-card-content {
 
 .mat-card-title {
   @include three-dots();
+  line-height: 1.2em;
 }
 
 md-card-header.solo-title .mat-card-header-text {
